# NumaPerf

./: .gitignore  CMakeLists.txt  Makefile  README.md  Todo.tex  abstract.tex  accesspattern-2.xlsx  analyze.tex  design.tex  evaluation  importantpapers.tex  intro.tex  numaperf.tex  readme.txt  sigplanconf.cls  todo.tex  tongping.tex  ~$accesspattern-2.xlsx
evaluation/AMG2006/: par_rap.c.new  par_relax.c.new
evaluation/UMT2013/: NumaPerf.dump  numaprof-SuOlsonTest-174214.json
evaluation/blackscholes/: FlexImageStore.h.new  NumaPerf.dump  numaprof-blackscholes-pthread-130983.json  patchForBlackScholes
evaluation/blackscholes/numaprof/: numaprof-blackscholes-pthread-5618.json
evaluation/bodytrack/: NumaPerf.dump  RandomGenerator.h.new  numaprof-bodytrack-pthread-131460.json
evaluation/canneal/: NumaPerf.dump  netlist.cpp.patch  netlist.h.patch  numaprof-canneal-pthread-133838.json
evaluation/commons/interleaved/: Makefile  libinterleaved.cpp  libinterleaved.h  real.h
evaluation/commons/lockintercept/: Makefile  liblockintercept.cpp  liblockintercept.h  real.h
evaluation/commons/resource/: Makefile  libthreadbinding.cpp  libthreadbinding.h
evaluation/commons/threadbinding/: Makefile  automics.h  files.h  libthreadbinding.cpp  libthreadbinding.h  real.h
evaluation/dedup/: NumaPerf.dump  encoder.c.threadnum  numaprof-dedup-pthread-129083.json  thread_binding.config
evaluation/facesim/: NumaPerf.dump  facesim.patch.1  taskQ.c.new
evaluation/ferret/: NumaPerf.dump  dataset.c.new  ferret.c.new  ferret.c.new.threadum  numaprof-ferret-pthread-134538.json  thread_binding.config  tpool.c.new  tpool.h.new
evaluation/fluidanimate/: NumaPerf.dump  NumaPerf.dump.1  NumaPerf.dump.2  numaprof-fluidanimate-pthread-152026.json  pthread.cpp.patch.1  pthread.cpp.patch.2  pthreads.cpp.bk  pthreads.cpp.new  pthreads.cpp.new.2  thread_binding.config
evaluation/fluidanimate/NumaProf/: numaprof-fluidanimate-pthread-52705.json
evaluation/lulesh/: NumaPerf.dump  lulesh.cc.new  numaprof-lulesh2.0-169163.json
evaluation/raytrace/: NumaPerf.dump  numaprof-raytrace-pthread-135198.json
evaluation/streamcluster/: NumaPerf.dump  numaprof-streamcluster-pthread-136556.json  streamcluster.cpp.bk  streamcluster.cpp.new  streamcluster.cpp.patch
evaluation/streamcluster/NumaPerf/: NumaPerf.dump
evaluation/streamcluster/NumaProf/: numaprof-streamcluster-pthread-52208.json
evaluation/swaptions/: NumaPerf.dump  numaprof-swaptions-pthread-137871.json
evaluation/vips/: NumaPerf.dump  memory.c.new  numaprof-vips-pthread-140050.json
evaluation/x264/: NumaPerf.dump  numaprof-x264-pthread-140456.json
llvm/: llvm-project-10.0.0.patch  readme
llvm/Load-Store-Instrumenter/: CMakeLists.txt  OriginalRWInstrumenter.cpp  RWInstrumenter.cpp  instrumenter.cpp
llvm/llvm-3.2.src/: Makefile.config  Makefile.llvmbuild  build.sh  config.status  llvm.spec
llvm/llvm-3.2.src/docs/: doxygen.cfg
notes/: analyze.tex  todo.tex
paper/: abstract.tex  evaluation.tex  intro.tex  numaperf.tex  refs.bib  relatedwork.tex
paper/data/: numaperf-performance.xlsx  ~$numaperf-performance.xlsx
references/: HPCT-NUMA_Notes.txt  Macpo_Notes.txt  README.md  tongping.tex
script/: overwrite_to_file.cpp
source/: Makefile  evaluation  libinstrument.cpp  libnumaperf.cpp  libnumaperf.h  test.c  xdefines.h
source/bean/: basicpageaccessinfo.h  cachelineaccessinfo.h  cachelinedetailedinfo.h  cachelinedetailedinfoforcachesharing.h  cachelinedetailedinfoforpagesharing.h  callstacks.h  diagnosecacheinfo.h  diagnosecachelineinfo.h  diagnosecallsiteinfo.h  diagnoseobjinfo.h  diagnosepageinfo.h  lockinfo.h  objectInfo.h  objectacessinfo.h  pageaccessinfo.h  pagebasicaccessinfo.h  pagedetailAccessInfo.h  scores.h  threadbasedinfo.h  threadstageinfo.h
source/utils/: addresses.h  asserts.h  bitmasks.h  maths.h  memorypool.h  mm.hh  overwrite_to_file.cpp  programs.h  random.h  real.h  sorts.h  timer.h
source/utils/allocators/: ptmalloc.h
source/utils/collection/: abstractShadowMap.h  addrtocacheindexshadowmap.h  addrtocacheptrindexshadowmap.h  addrtopageindexshadowmap.h  addrtopagesinglefragshadowmap.h  hashfuncs.h  hashmap.h  list.h  priorityqueue.h  shadowhashmap.h
source/utils/concurrency/: automics.h  spinlock.h
test/: Makefile  libnumaperfempty.cpp  libnumaperfempty.h  out  out.EP_FullLinkTimeOptimizationEarly  out.EP_FullLinkTimeOptimizationLast  out.EP_OptimizerLast  out.EP_Peephole  out.EP_ScalarOptimizerLate  out.EP_VectorizerStart  test  test.bc  test.cpp
(+1338 files in other folders)
