cmake_minimum_required(VERSION 3.15)
project(NumaPerf)

set(CMAKE_CXX_STANDARD 14)
add_compile_definitions(NUMA_NODES=2)
add_compile_definitions(MAX_THREAD_NUM=1024)
add_definitions(-DDEV)

include_directories(source)
include_directories(source/utils)
include_directories(source/utils/concurrency)

add_executable(NumaPerf
        source/utils/concurrency/automics.h
        source/utils/collection/hashfuncs.h
        source/utils/collection/addrtopageindexshadowmap.h
        source/utils/collection/addrtocacheindexshadowmap.h
        source/utils/collection/list.h
        source/utils/overwrite_to_file.cpp
        source/utils/collection/hashmap.h
        source/utils/collection/priorityqueue.h
        source/utils/collection/addrtopagesinglefragshadowmap.h
        source/libnumaperf.cpp
        source/libnumaperf.h
        source/bean/callstacks.h
        source/bean/threadstageinfo.h
        source/bean/lockinfo.h
        source/bean/threadbasedinfo.h
        source/bean/scores.h
        source/bean/objectInfo.h
        source/bean/pagebasicaccessinfo.h
        source/bean/pagedetailAccessInfo.h
        source/bean/cachelinedetailedinfo.h
        source/bean/diagnosecallsiteinfo.h
        source/bean/diagnoseobjinfo.h
        source/bean/diagnosecacheinfo.h
        source/bean/diagnosepageinfo.h
        source/utils/numa/numas.h
        source/utils/programs.h
        source/utils/real.h
        source/utils/maths.h
        source/utils/bitmasks.h
        source/utils/addresses.h
        source/utils/asserts.h
        source/utils/concurrency/spinlock.h
        source/utils/allocators/ptmalloc.h
        source/xdefines.h
        source/utils/log/Logger.h
        source/utils/timer.h
        source/utils/memorypool.h
        source/utils/mm.hh
        source/utils/sorts.h
        evaluation/commons/interleaved/libinterleaved.cpp
        evaluation/commons/interleaved/libinterleaved.h
        evaluation/commons/threadbinding/libthreadbinding.cpp
        evaluation/commons/threadbinding/libthreadbinding.h
        evaluation/commons/threadbinding/real.h
        evaluation/commons/threadbinding/automics.h
        evaluation/commons/threadbinding/files.h
        test/test.cpp)
